# spacetime-schema-tool

./: .gitignore  Cargo.toml  README.md
src/: main.rs  schema.rs  spacetime_client.rs
